# pretix-discord-middleware

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.temporal  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml  temporal.Dockerfile
.ai-sessions/: lessons.md  session-20260330-2121-initial-implementation.md  session-20260330-2239-deploy-debug-logging.md  session-20260416-0016-tailscale-temporal.md
.ai-sessions/init-files/: plan.md  spec.md  todo.md
src/pretix_discord/: api.py  config.py  discord_activities.py  main.py  models.py  pretix_activities.py  worker.py  workflow.py
tests/: test_api.py  test_config.py  test_discord.py  test_discord_sender.py  test_pretix.py  test_workflow.py
