[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pretix-discord"
version = "0.1.0"
description = "Pretix-to-Discord webhook middleware powered by Temporal"
requires-python = ">=3.13"
dependencies = [
    "temporalio",
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "nox",
    "respx",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
